# antinote-linux

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
docs/: index.html
src/: App.svelte  PlainOverlay.svelte  SlashPicker.svelte  TodoOverlay.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  migrations.rs  shortcuts.rs  tray.rs
src/lib/: db.ts  keywords.svelte.ts  links.ts  noteState.svelte.ts  types.ts  windowState.ts
