[package]
name = "antinote-linux"
version = "0.1.1"
description = "A lightweight scratchpad for Linux, inspired by Antinote"
authors = ["you"]
edition = "2021"

[lib]
name = "antinote_linux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
