[package]
name = "antinote-linux"
version = "0.1.4"
description = "A lightweight scratchpad for Linux, inspired by Antinote"
authors = ["you"]
edition = "2021"

[lib]
name = "antinote_linux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2.5.3"
x11 = { version = "2.21.0", features = ["xlib"] }
